feat: added lesson for inputbox

--- a/react/6-PokazWpisywanyTekst-cz1/index.html
+++ b/react/6-PokazWpisywanyTekst-cz1/index.html
@@ -12,6 +12,7 @@
 <body>
 	<!-- Element HTML pełniący rolę kontenera dla aplikacji React -->
 	<div id="root"></div>
+	<div id="myroot"></div>
 	<!-- Biblioteka React -->
 	<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
 	<!-- Biblioteka React DOM -->
